--- a/about.html
+++ b/about.html
@@ -42,6 +42,8 @@
     <img class="sideimg2" src="img/cinzano.png" alt="">
 </div>
     </main>
-    <footer></footer>
+       <footer>
+  <p>&copy; 2025 Wallsy Posters. All rights reserved.</p>
+</footer>
   </body>
 </html>
