--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,8 @@
 </div>
 
     </main>
-    <footer></footer>
+       <footer>
+  <p>&copy; 2025 Wallsy Posters. All rights reserved.</p>
+</footer>
 </body>
 </html>
