--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@ Express yourself — one poster at a time.</p>
     <footer></footer>
 
     <script src="js/script.js"></script>
+
+    <footer>
+  <p>&copy; 2025 Wallsy Posters. All rights reserved.</p>
+</footer>
   </body>
 </html>
