--- a/posters.html
+++ b/posters.html
@@ -28,5 +28,8 @@
 
 
     <script src="js/articles.js"></script>
+       <footer>
+  <p>&copy; 2025 Wallsy Posters. All rights reserved.</p>
+</footer>
 </body>
 </html>
