--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
   <body class="bodysignup">
     <header>
       <div class="nav">
-        <a href="index.php" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link">Home</a>
         <a href="posters.html" class="nav-link">Posters</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="signup.html" class="nav-link">Sign Up</a>
